# create-pyapp

./: Makefile  README.md  pyproject.toml
.github/workflows/: main-pr.yml
crappy/: ProjectFileScope.py  __init__.py  _git.py  _virtenv.py  cli.py
crappy/assets/project/: .gitignore.jinja  Makefile.jinja
crappy/assets/project/.github/workflows/: main-pr.yml.jinja
create_pyapp/: ProjectFile.py  ProjectFileScope.py  _git.py  _virtenv.py  cli.py  create_pyapp.py
create_pyapp/assets/project/: Makefile.jinja  pyproject.toml.jinja
create_pyapp/assets/tmuxinator/: tmuxinator-cfg.yml.jinja
tests/: test_create_pyapp.py
