[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "crappy"
requires-python = ">=3.10"
version = "0.1.4"
readme = "README.md"
dependencies = [ "click>=8.0", "jinja2>=3.0" ]

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "toml-cli"]

all = ["pip-tools", "pytest", "toml-cli"]

[tool.setuptools]
packages.find.exclude = ["tests*"]
include-package-data = true

[project.scripts]
crappy = "crappy.cli:main"
